# StalcraftBot

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
sql/: schema.sql
src/: main.cpp
src/core/: ApiClient.cpp  ApiClient.h  Config.cpp  Config.h  Database.cpp  Database.h  DealDetector.cpp  DealDetector.h  ItemCatalogLoader.cpp  ItemCatalogLoader.h  PriceAnalyzer.cpp  PriceAnalyzer.h  Scheduler.cpp  Scheduler.h
src/models/: Alert.h  Item.h  Lot.h  PriceSnapshot.h
src/ui/: ActiveLotsWidget.cpp  ActiveLotsWidget.h  ItemManagerWidget.cpp  ItemManagerWidget.h  LogWidget.cpp  LogWidget.h  MainWindow.cpp  MainWindow.h  PriceChartWidget.cpp  PriceChartWidget.h  PriceTableWidget.cpp  PriceTableWidget.h  SettingsWidget.cpp  SettingsWidget.h
src/utils/: Logger.cpp  Logger.h
